# chickenStock

./: .gitignore  README.md
AI/: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
AI/app/: account_strategy_manager.py  ai_trading.py  auth_client.py  backend_client.py  bollinger_band_trading.py  bot_instance.py  bot_manager.py  config.py  docker-compose.yml  envelope.py  envelope_trading.py  kiwoom_api.py  kiwoom_auth.py  kiwoom_websocket.py  kiwoon_api.py  main.py  models.py  prometheus.yml  stock_cache.py  token_manager.py
AI/app/api/: backend_client.py  kiwoom_api.py  kiwoom_websocket.py
AI/app/auth/: auth_client.py  kiwoom_auth.py  token_manager.py
AI/app/bot/: bot_instance.py  bot_manager.py  bot_stock_cache.py
AI/app/cache/: stock_cache.py
AI/app/data/: data_utils.py
AI/app/models/: drl_utrans_network.py  drl_utrans_scalers.pkl  request_models.py  trade_models.py
AI/app/monitor/: cache_monitor.py
AI/app/monitoring/: decorators.py  exporter.py  metrics.py
AI/app/static/css/: monitor.css
AI/app/static/js/: monitor.js
AI/app/strategies/: base.py  bollinger.py  drl_utrans.py  envelope.py  short_term.py
AI/app/templates/: monitor_dashboard.html
AI/cache/: envelope_indicators.json  filtered_stocks.json  stock_info.json
AI/trading-bot-dashboard/: package-lock.json  package.json
AI/trading-bot-dashboard/public/: index.html
AI/trading-bot-dashboard/src/: App.css  App.js  index.js
AI/trading-bot-dashboard/src/components/: AccountInfo.js  Alert.js  BollingerIndicators.js  EnvelopeIndicators.js  Positions.js  PriceMonitor.js  RecentTrades.js  Sidebar.js  TokenManager.js  login.js
AI/trading-bot-dashboard/src/utils/: formatters.js
BE/: .gitignore  build.gradle  settings.gradle
(+569 files in other folders)
