[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "이연규",email = "gyoo413@naver.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "numpy (==1.24.3)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
